# ts_library_invalid_import

./: .gitignore  README.md
monorepo/: BUILD.bazel  WORKSPACE  index.ts  package.json
monorepo/src/: BUILD.bazel
webpack/: app.js  package.json  webpack.config.js
